--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 .slide1 {
-    background-image: url('../src/assets/slide1.avif');
+    background-image: url('../src/assets/slide1.jpeg');
 }
 .slide2 {
-    background-image: url('../src/assets/slide2.jpg');
+    background-image: url('../src/assets/slide2.png');
 }
 .slide3 {
     background-image: url('../src/assets/slide3.jpg');
